--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "keen-router",
   "version": "0.1.0",
   "description": "A tree based, disambiguating path router (for HTTP)",
+  "repository":"https://github.com/celer/keen-router.git",
   "main": "index.js",
   "scripts": {
     "test": "node index.js"
