--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "keen-router",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "A tree based, disambiguating path router (for HTTP)",
+  "homepage": "https://github.com/celer/keen-router",
+  "bugs": "https://github.com/celer/keen-router/issues",
   "repository": "https://github.com/celer/keen-router.git",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/istanbul cover index.js && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
+    "test": "./node_modules/.bin/istanbul cover _mocha && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage"
   },
   "author": "celer",
+  "contributors": [
+    "Eli Skeggs <skeggse@gmail.com>"
+  ],
   "license": "MIT",
   "devDependencies": {
     "coveralls": "^2.10.0",
-    "istanbul": "^0.2.6"
+    "istanbul": "^0.2.6",
+    "mocha": "^1.21.3"
   }
 }
