--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "keen-router",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A tree based, disambiguating path router (for HTTP)",
   "homepage": "https://github.com/celer/keen-router",
   "bugs": "https://github.com/celer/keen-router/issues",
   "repository": "https://github.com/celer/keen-router.git",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/istanbul cover _mocha && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage"
+    "test": "istanbul cover _mocha && coveralls < ./coverage/lcov.info && rm -rf ./coverage"
   },
   "author": "celer",
   "contributors": [
